Add support for Java 17 (#346)
* Update Spark to 3.3.3

* Update tests

* Update .gitignore

* Fix tests

* Update dependencies in the template

* Update dependencies in